docker: update gorush version
Update version to newest and use android credentials as json file.
Adapt docker compose to use healthchecks.

Referenced issue: https://github.com/status-im/infra-push-notify/issues/7

Signed-off-by: markoburcul <marko@status.im>

--- a/templates/config.yml.j2
+++ b/templates/config.yml.j2
@@ -31,7 +31,7 @@ api:
 
 android:
   enabled: true
-  apikey: "{{ gorush_android_firebase_key | mandatory }}"
+  key_path: "/conf/key.json"
   max_retry: 0 # resend fail notification, default value zero is disabled
 
 queue:
