--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -1,4 +1,8 @@
 ---
+networks:
+  default:
+    name: '{{ gorush_docker_network_name }}'
+
 services:
   app:
     container_name: '{{ gorush_cont_name }}'
