docker: add docker network connectivity
Configure compose to use shared 'status-go' network.

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -1,4 +1,9 @@
 ---
+networks:
+  default:
+    name: '{{ gorush_docker_network_name }}'
+    external: true
+
 services:
   app:
     container_name: '{{ gorush_cont_name }}'
